[package]
name = "bcup"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
directories = "6.0.0"
zip = "2.2.2"
tempfile = "3.16.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.11"
